test/captureIndexReplacementClassical6_3.slq

def main(){
	x:=0;
	a:=vector(3,x);
	f:=(){
		(a[1],a[2]):=(a[2],a[1]);
		return a;
	};
	b:=a; /// error
	forget(f()=(x,x,x));
	assert(measure(H(x))=0);
}
